# book_store_api

./: MakeFile  db.sqlite3  pyproject.toml
apps/: admin.py  urls.py
apps/models/: authors.py  books.py  categories.py
apps/serializers/: author.py  books.py  category.py
apps/views/: author.py  books.py  categories.py
root/: settings.py  urls.py
templates/: preview_pdf.html
